est refactoring - part 2